feat: Implement new state model to frontend
